Fixed spacing

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -617,11 +617,11 @@ nav .nav-bg {
 
 .kiddies_cards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 3em;
-  max-width: 1400px;
+  max-width: 800px;
   margin: 0 auto;
-  padding: 2em 1em 0.5em 0em;
+  padding: 1em 0.5em 0.5em 0em;
 }
 
 .kiddies-activity {
@@ -704,7 +704,7 @@ nav .nav-bg {
   font-size: 1.8rem;
   color: #000000;
   line-height: 1.5;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
   flex-grow: 1;
 }
 
